# charon

./: .gitmodules  LICENSE  NOTICE  README.md  pyproject.toml
charon/: __main__.py
charon/commands/: back.py  exit.py  help.py  info.py  options.py  run.py  set.py  unset.py  use.py
charon/core/: command.py  kerberos_module.py  loader.py  module.py  shell.py
charon/modules/: GetTGT.py
