[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "charon"
version = "0.1.0"
description = "A swiss army knife framework for Kerberos post-exploitation"
requires-python = ">=3.10"
dependencies = [
    "prompt_toolkit>=3.0",
    "rich>=15.0",
]

[project.scripts]
charon = "charon.__main__:main"

[tool.hatch.build.targets.wheel]
packages = ["charon"]
