[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "charon"
version = "0.1.0"
description = "A swiss army knife framework for Kerberos post-exploitation"
requires-python = ">=3.10"
dependencies = [
    "prompt_toolkit>=3.0",
    "rich>=15.0",
    "impacket @ git+https://github.com/drzcola/impacket",
]

[project.scripts]
charon = "charon.__main__:main"

[tool.hatch.build.targets.wheel]
packages = ["charon"]

[tool.hatch.metadata]
allow-direct-references = true
